<?xml version="1.0"?>
<package format="3">
  <name>b3m_driver</name>
  <version>0.0.0</version>
  <description>The b3m_driver package</description>
  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>

  <export />
</package>
