<?xml version="1.0"?>
<package format="3">
  <name>b3m_hw_interface</name>
  <version>0.0.0</version>
  <description>The b3m_hw_interface package</description>
  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>b3m_driver</depend>
  <depend>combined_robot_hw</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/b3m_hw_interface_plugin.xml"/>
  </export>
</package>
